--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,19 @@
 <resources>
     <string name="app_name">Popular Movies Stage 1</string>
+
+    <!-- Sort by-->
     <string name="popular">Popular</string>
     <string name="top_rated">Top Rated</string>
+
+    <!-- Detail Activity-->
+    <string name="detail_title_label">Title:</string>
+    <string name="detail_release_date_label">Release Date:</string>
+    <string name="detail_vote_average_label">Ratings:</string>
+    <string name="detail_overview_label">Plot Synopsis:</string>
+
+    <!-- Error messages-->
+    <string name="detail_error_message">Movie data not available</string>
+
+    <string name="movie_picture">Movie picture</string>
+
 </resources>
