added the review and activated the intent to open the trailer in youtube add. now to add the favourite part

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,8 @@
     <string name="detail_error_message">Movie data not available</string>
 
     <string name="movie_picture">Movie picture</string>
+    <string name="trailers">Trailers</string>
+    <string name="review">Reviews</string>
+    <string name="reviewed_by">Reviewed By:</string>
 
 </resources>
