Managed to add to favourites but still need to add the check if the movie already exist dont add again. Have to add the remove movie and the saving state for the rotation. have to add the click to detail activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="trailers">Trailers</string>
     <string name="review">Reviews</string>
     <string name="reviewed_by">Reviewed By:</string>
+    <string name="favourites">Favourites</string>
 
 </resources>
