Review for popular movies stage 2 activity_detail.xml
Your layout is excellent!
However, it is too long. You could split it into smaller layouts.

A tip to minimize it's XML layout size is to use the tag include.
More informations here.

You could use styles to customize your layout, to make it more shorter, modular, saving a lot of code lines.

You could create a TextViewStyle for all the TextView's in this layout.

More informations about Styles can be found here and here.

DetailActivity.java

In lines 26, 27 and so many others, there are unused imports in this class.

You could use the shortcut CTRL + ALT + O (Windows) or Control + alt + O (Mac) to clean those imports from classes in Android Studio.

https://stackoverflow.com/questions/22273434/remove-unused-imports-in-android-studio

MainActivity.java

You defined here a string.

In this line an interesting tip to increment the app quality is to include all strings in file /res/values/strings.xml.

Unifying string resources in file /res/values/strings.xml helps stimulates strings internationalization support. For instance, if you are physically in other country (France for instance), all strings of this language will be located in file /res/values-fr/strings.xml.

If strings were declared directly in the XML layout file, this string customization by country would not be possible.

More details can be found here.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,9 @@
     <string name="review">Reviews</string>
     <string name="reviewed_by">Reviewed By:</string>
     <string name="favourites">Favourites</string>
+    <string name="Popular">popular</string>
+    <string name="noic">There is no internet connection</string>
+    <string name="Top_rated">top_rated</string>
+    <string name="favmovies">This is the list of favourite movies</string>
 
 </resources>
